# baf-agent

./: .gitignore  README.md  baf_config.dev_laptop.yaml  baf_config.small_enterprise.yaml  baf_config.yaml  pyproject.toml  setup.py
baf_cli/: main.py
baf_console/: app.py
baf_core/: config.py  policies.py  session.py
baf_sidecar/: README.md  app.py
data/: study_notes_with_baf.txt
data/personal_data/: aadhaar_mock_2.txt  aadhaar_mock_6.txt  college_id_mock_1.txt  college_id_mock_2.txt  college_id_mock_3.txt  college_id_mock_4.txt  college_id_mock_7.txt  marksheet_sem1_4.txt  marksheet_sem2_1.txt  marksheet_sem2_5.txt  marksheet_sem3_2.txt  marksheet_sem3_6.txt  marksheet_sem4_7.txt
data/personal_docs/: aadhaar_mock_1.txt  aadhaar_mock_3.txt  aadhaar_mock_5.txt
data/study_materials/: unit2_1.txt  unit3_1.txt  unit3_3.txt  unit4_1.txt  unit4_2.txt  unit5_1.txt  unit5_2.txt
docs/: architecture.md  langchain_guide.md  mcp_tools_guide.md  quickstart_python_agent.md  quickstart_sidecar_http.md
examples/: fuzz_baf_surface.py
examples/exam_helper_v1/: lab_log.md
examples/exam_helper_v1/data/: study_notes_day1.txt  (+1 more)
examples/langchain_baf_agent/: main.py  main_ollama_agent.py
examples/mcp_baf_tools/: README.md  baf_mcp_tools.py  demo_baf_exfil.py  demo_raw_agent.py  demo_raw_exfil.py  malicious_tool.py  server.py  test_small_enterprise_profile.py
src/agent/: exam_helper.py
src/baf/: baf_wrapper.py
src/server/: exfil_server.py
tools/: analyze_actions.py  attack_scenarios.py  exfil_server.py  generate_dummy_data.py  redteam_harness.py
(+22 files in other folders)
