[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baf-agent"
version = "2.0.0"
requires-python = ">=3.9"
dependencies = [
  "pyyaml",
  "requests",
]

[project.scripts]
baf = "baf_cli.main:main"

[tool.setuptools]
packages = [
  "baf_core",
  "baf_cli",
  "baf_console",
  "baf_sidecar",
]
